@@ -1,0 +1,2 @@
+This is a very simple texi manual   <>.
+
